--- a/docs/03.CSS/global.css
+++ b/docs/03.CSS/global.css
@@ -175,6 +175,7 @@ main {
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
+    margin-top: 80px; /* Adjusted based on header height */
 }
 
 /* --- Sections --- */
